2008-01-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_bandwidth: cleaned up with bashcritic
	* check_bandwidth: fixed the shebang