@@ -22,4 +22,4 @@ requires:
   Pod::Usage: 0
   perl: 5.8.0
   version: 0
-version: 0.9.0
+version: 0.9.2
